feat: add swagger annotations
